--- a/package.json
+++ b/package.json
@@ -6,6 +6,12 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^29.2.4",
+    "@types/node": "^18.11.11",
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.9",
+    "@types/redux-logger": "^3.0.9",
+    "babel-plugin-macros": "^3.1.0",
     "firebase": "^9.10.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -20,6 +26,8 @@
     "reselect": "^4.1.7",
     "sass": "^1.55.0",
     "styled-components": "^5.3.6",
+    "typed-redux-saga": "^1.5.0",
+    "typescript": "^4.9.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
